# claudette

./: .connection_test  .dockerignore  .env.example  .env.ultipa  .env.ultipa.example  .gitignore  .pre-commit-config.yaml  ADVANCED_POLISHING_COMPLETE.md  BATTLE_OF_NABOO_REPORT.json  BENCHMARK_RESULTS.md  CACHE_SYSTEM_VERIFICATION_FINAL_REPORT.md  CHANGELOG.md  CHATGPT_INTEGRATION_README.md  CLASSIFICATION_FIX_REPORT.md  CLAUDE.md  CLAUDETTE.1  CLAUDETTE_ASSESSMENT_REPORT.md  CLAUDETTE_BENCHMARK_REPORT.md  CLAUDETTE_BUGS_FIXED.md  CLAUDETTE_COMPREHENSIVE_INTEGRATION_PLAN.md  CLAUDETTE_DEBUG_ANALYSIS.md  CLAUDETTE_FINAL_ASSESSMENT.md  CLAUDETTE_GEAR_SCORE.md  CLAUDETTE_INTEGRITY_AUDIT_REPORT.md  CLAUDETTE_JS_PORT_DOCUMENTATION.md  CLAUDETTE_MCP_SELF_TEST_REPORT.md  CLAUDETTE_MCP_SETUP.md  CLAUDETTE_QUALITY_ASSESSMENT.md  CLAUDETTE_STRATEGIC_INTEGRATION_PLAN_V2.2-3.0.md  CLAUDETTE_SUITE_COMPREHENSIVE_TEST_REPORT.md  CLAUDETTE_SWARM_SUCCESS_REPORT.md  CLAUDETTE_SWARM_TEST_RESULTS.md  CLAUDETTE_TEST_RESULTS.md  CLAUDETTE_V1.0.4_COMPREHENSIVE_TEST_REPORT.md  CLAUDETTE_V2.1.0_DISTRIBUTION.md  CLAUDE_CODE_INTEGRATION_GUIDE.md  CLAUDE_INTEGRATION_ANLEITUNG.md  CLAUDE_SYSTEMS_BENCHMARK_SUMMARY.md  CLAUDE_SYSTEM_POLISH_COMPLETE.md  CLEAN_REPOSITORY_SUMMARY.md  (+193 more)
.claude/: settings.json  settings.json.backup  settings.local.json
.github/: SECURITY_CONFIGURATION.md  dependabot.yml  pull_request_template.md  trufflehog-exclude.txt
.hive-mind/: hive.db-shm  hive.db-wal
.swarm/: memory.db
Claude_Code_Baseline_Optimizations/: FUTURE_PROJECT_ROADMAP.md  IMPLEMENTATION_COMPLETE_SUMMARY.md
archive/: INDEX.md  README_LEGACY.md
archives/: debug-cost-calculation.js  mcp-server-with-env.js  working-mcp-server.js
benchmarks/: __init__.py  bench_backend_switch.py  bench_cache_hit.py  bench_compress_latency.py  bench_memory_peak.py
billing/: billing_report_20250718_224910.md  detailed_usage_analysis_20250719_075005.md  detailed_usage_analysis_20250720_174905.md
build-artifacts/: agent1-core-benchmark-final.js  benchmark-dynamic-timeout-integration.js  claude-terminal-diagnostics.sh  claudette-maturity-assessment-swarm.js  comprehensive-backend-test.js  comprehensive-connection-test.js  comprehensive-feature-test.js  comprehensive-multi-iteration-benchmark.js  comprehensive-test.js  demo-setup-wizard.js  final-comprehensive-test.js  focused-claudette-suite-benchmark.js  organize-repository.js  performance-benchmark.ts  performance-benchmarker.js  real-api-demonstration-benchmark.js  repository-analysis-swarm.js  repository-cleanup.js  run-validation-suite.sh  updated-comprehensive-assessment.json
claudette/: README.md  __init__.py  __main__.py  advanced_lazy_loader.py  backends.py  cli_commands.py  config.py  config.template.py  context_builder.py  dashboard.py  error_handler.py  fast_cli.py  history.py  invoker.py  lazy_imports.py  main.py  main_backup.py  main_impl.py  memory_optimizer.py  performance_cli.py  stats.py
claudette-nodejs/: package.json
config/: bandit 2.yaml  claude-flow.config.json  claudette.config.json  claudette_config.yaml  commitlint.config.cjs  config.template.yaml  config.yaml  default.json  deploy_constraints.gql  deploy_indexes.gql  mkdocs.yml
core/: __init__.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BACKEND_RELIABILITY_ENHANCEMENT_REPORT.md  CACHE_VERIFICATION_REPORT.md  CLAUDETTE_CURRENT_STATE_AND_ROADMAP.md  CLAUDETTE_FOUNDATION_SWARM_INTEGRATION_PLAN.md  CLAUDETTE_V2.1.5_RAG_DISTRIBUTION.md  CLAUDE_FLOW_INTEGRATION.md  COMMON_PITFALLS_AND_SOLUTIONS 2.md  COMPREHENSIVE_BENCHMARK_SUMMARY.md  COMPREHENSIVE_CLAUDETTE_BUG_REPORT.md  COMPREHENSIVE_DATABASE_CACHE_TEST_RESULTS.md  COMPREHENSIVE_MCP_TEST_REPORT.md  COMPREHENSIVE_PRODUCTION_READINESS_ASSESSMENT.md  CONTRIBUTING.md  CONTRIBUTING.md.duplicate  CORRECTED_BACKEND_ANALYSIS.md  CREDENTIAL_SETUP_GUIDE.md  CRITICAL_ISSUES_FIX_REPORT.md  DEVELOPMENT_BEST_PRACTICES 2.md  DEVELOPMENT_BEST_PRACTICES_GUIDE.md  DEVOPS_INFRASTRUCTURE_GUIDE.md  DISTRIBUTION_SUMMARY.md  EMERGENCY_RELEASE_INFRASTRUCTURE.md  ENVIRONMENT_SETUP.md  FIXES_COMPLETED.md  GQL_INTEGRATION_PLAN.md  INSTALLATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_SUCCESS_SUMMARY.md  POLISHING_COMPLETE_REPORT.md  PROBLEM_SOLVING_GRAPH_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE_GUIDELINES.md  QUALITY_ASSESSMENT_REPORT.md  README.md  README_POLISHED.md  REPOSITORY_ORGANIZATION_PLAN.md  (+22 more)
experiments/: README.md  cost_comparison_test.py  enhanced_quality_test.py  test_model_selection_issues.py
formula/: claudette.rb
monitoring/: claudette_alerts.yml  prometheus.yml
plugins/: README.md
project-state-framework/: BEST_PRACTICES_LIBRARY.md  CLAUDE_FLOW_LESSONS_LEARNED.md  DYNAMIC_AUTOMATION_SETUP.md  DYNAMIC_PROJECT_TRACKING.md  MULTI_PROJECT_FRAMEWORK.md  PROJECT_DIARY_CLAUDE_FLOW.md  README.md  USER_DEVELOPMENT_PROFILE.md
scripts/: README.md  classification_accuracy_test.py  cleanup_repo.sh  emergency-release.sh  enhanced_model_switching.py  install.ps1  install.sh  prepare_commit.sh  quality_calibration_system 2.py  quality_validation_framework.py  security_audit.py  setup_claudette_config.sh  swarm_cost_conservation_test.py  test_sudo_functionality.py  validate-artifacts.sh  web-install.sh
src/: README.md  current-backend-setup-table.md  index 2.ts  index.ts  kpi-dashboard-1753899960417.html  kpi-dashboard-1754066267096.html  kpi-dashboard-1754067232935.html  kpi-dashboard-1754067636709.html  kpi-dashboard.js  package.json  quick-kpi-report-1753899960418.json  quick-kpi-report-1754066267098.json  quick-kpi-report-1754067232937.json  quick-kpi-report-1754067636710.json  qwen-assessment-verdict.md  qwen-quality-analysis.md  test-adaptive-system.js  test-backend-mock.js  test-basic.js  test-cli-comprehensive.js  test-cli-experience.js  test-cli-mock.js  test-cli-simple.js  test-coding-specialist.js  test-kpi-framework.js  test-kpi-quick.js  test-model-capabilities.js  test-openai-focused.js  test-qwen-chatgpt-quick.js  test-qwen-direct.js  (+6 more)
(+530 files in other folders)
